<resources>
    <string name="app_name">Lawyer Finder App</string>
    <string name="password">Password</string>
    <string name="lawyer_finder">Lawyer Finder</string>
    <string name="login">Login</string>
    <string name="login_with_your_data_that_you_entered_during_your_registration">Login with your data that you entered during your registration</string>
    <string name="email">Email</string>
    <string name="min_8characters">min. 8characters</string>
    <string name="name_example_com">name@example.com</string>
    <string name="forgot_password">Forgot password</string>
    <string name="dont_t_have_an_account">Dont\'t have an account?</string>
    <string name="sign_up_text">Sign up</string>
    <string name="signup">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">first name</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="lawyer">Lawyer</string>
    <string name="client">Client</string>
    <string name="select_user_type">Select User Type</string>
    <string name="last_name">Last Name</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login_text">Log In</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>


    //pasta

    <string name="pastaIngredients">Pasta
\nCream Cheese
\nParmesan Cheese
\nOlive Oil
\nGarlic
\nSalt Pepper</string>
    <string name="pastaDesc">Cook your pasta until al dente
\nSaute’ garlic in olive oil until fragrant
\nAdd cream cheese, pasta cooking water, parmesan, and stir well
\nDrain and add pasta to the skillet
\nToss until well combined, adding some pasta water if needed</string>

    //maggi

    <string name="maggiIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>

    <string name="maggieDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>

    //cake

    <string name="cakeIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="cakeDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>

    //pancake

    <string name="pancakeIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="pancakeDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>

    //pizza

    <string name="pizzaIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="pizzaDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>

    //burgers

    <string name="burgerIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="burgerDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>

    //fries

    <string name="friesIngredients">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="friesDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>

    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>

</resources>



