<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">


    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="348dp"
        android:layout_height="45dp"
        android:autofillHints="min. 8 characters"
        android:background="@drawable/input_bg"
        android:drawableEnd="@android:drawable/ic_menu_view"
        android:ems="10"
        android:hint="@string/min_8characters"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="152dp"
        android:layout_height="26dp"
        android:layout_marginTop="2dp"
        android:text="@string/confirm_password"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegPassword" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="352dp"
        android:layout_height="44dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="28dp"
        android:autofillHints="last name"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="last name"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="98dp"
        android:layout_height="25dp"
        android:layout_marginTop="9dp"
        android:text="@string/password"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextRegEmail" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/lawyer_finder"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/signup"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="65dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />

    <EditText
        android:id="@+id/editTextRegPassword"
        android:layout_width="351dp"
        android:layout_height="47dp"
        android:layout_marginTop="1dp"
        android:autofillHints="min. 8 characters"
        android:background="@drawable/input_bg"
        android:drawableEnd="@android:drawable/ic_menu_view"
        android:ems="10"
        android:hint="@string/min_8characters"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/SignupButton"
        android:layout_width="363dp"
        android:layout_height="58dp"
        android:layout_marginTop="7dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:text="Sign Up"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="16dp"
        android:text="@string/have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="16dp"
        android:text="@string/login_text"
        android:textColor="@color/design_default_color_primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTextRegEmail"
        android:layout_width="348dp"
        android:layout_height="49dp"
        android:autofillHints="name@example.com"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/name_example_com"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="291dp"
        android:fontFamily="sans-serif"
        android:text="First Name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="293dp"
        android:fontFamily="sans-serif"
        android:text="@string/last_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTexFirstName" />

    <EditText
        android:id="@+id/editTexFirstName"
        android:layout_width="355dp"
        android:layout_height="46dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="first name"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="19dp"
        android:text="@string/select_user_type"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />


    <RadioGroup
        android:id="@+id/radioGroupRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword">

        <RadioButton
            android:id="@+id/radioButtonClient"
            android:layout_width="87dp"
            android:layout_height="26dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="17dp"
            android:text="Client"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/checkBox"
            app:layout_constraintEnd_toStartOf="@+id/radioButtonLawyer"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />

        <RadioButton
            android:id="@+id/radioButtonLawyer"
            android:layout_width="100dp"
            android:layout_height="24dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="19dp"
            android:text="Lawyer"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/checkBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="323dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="7dp"
        android:text="@string/accept_terms_and_conditions"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SignupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>